--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Anime chibi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <!-- link style css -->
+    <link rel="stylesheet" href="./style.css">
     <!-- script main.js -->
     <script src="./main.js" type="module" defer></script>
 </head>
@@ -42,6 +43,14 @@
           </div>
         </div>
       </nav>
+      <section class="cards-container">
+        <!-- <div class="anime-card">
+          <img src="" alt="anime img">
+          <div>
+            <p class="fw-bold m-0">Shingeky no kyojin</p>
+          </div>
+        </div> -->
+      </section>
 
     <!-- bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
