fix: :bug: correción sintax html
se corrigio un error de tipado en el archivo html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Genres
                 </a>
-                <ul class="dropdown-menu p-1" id="#genres">
+                <ul class="dropdown-menu p-1" id="genres">
                   <!-- <li><button class="btnGenre btn border-0 col-12" value="Hola">HEYYYYYYYYYY</button></li> -->
+                  <button class="btnGenre btn border-0 col-12 col-sm-10 col-md-5 col-lg-4" value="Fantasy">Action</button>
                 </ul>
               </li>
             </ul>
