feat: Se finalizo toda la creacion de los nuevos módulos encargados de hacer el GET a la API y traer los datos  buscados mediante el input

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </button>
           <div class="collapse navbar-collapse py-2" id="navbarSupportedContent">
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input class="formSearch  form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <input class="submit btn btn-info" type="submit" value="Search">
             </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -37,7 +37,7 @@
                 </a>
                 <ul class="dropdown-menu p-1" id="genres">
                   <!-- <li><button class="btnGenre btn border-0 col-12" value="Hola">HEYYYYYYYYYY</button></li> -->
-                  <button class="btnGenre btn border-0 col-12 col-sm-10 col-md-5 col-lg-4" value="Fantasy">Action</button>
+                  <!-- <button class="btnGenre btn border-0 col-12 col-sm-10 col-md-5 col-lg-4" value="Action">Action</button> -->
                 </ul>
               </li>
             </ul>
@@ -46,9 +46,9 @@
       </nav>
       <section class="cards-container">
         <!-- <div class="anime-card">
-          <img src="" alt="anime img">
+          <img src="https://th.bing.com/th/id/OIP.HJmjxJswAx9G_UQlcKvBjQAAAA?pid=ImgDet&rs=1" alt="anime img">
           <div>
-            <p class="fw-bold m-0">Shingeky no kyojin</p>
+            <p class="text-dark m-0">Shingeky no kyojin</p>
           </div>
         </div> -->
       </section>
