fix: :bug: correción sintaxis etiquetas html
se corrigio un error de sintaxis en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
           </div>
         </div>
       </nav>
-
+      <div class="genre_tittle-container container-fluid p-3">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="genre-title text-center text-info fw-bold"></h1>
+          </div>
+        </div>
+      </div>
       <section class="anime_info-container container my-3">
-        <div class="row rounded bg-dark">
-          <img class="col-12 col-sm-4 col-md-4 col-lg-3 p-0" src="https://th.bing.com/th/id/OIP.HJmjxJswAx9G_UQlcKvBjQAAAA?pid=ImgDet&rs=1" alt="">
-          <div class=" col-12 col-sm-8 col-md-8 col-lg-8 p-0 d-flex flex-column align-items-center py-3">
+        <!-- <div class="row rounded bg-dark">
+          <img class="col-12 col-sm-12 col-md-4 col-lg-3 p-0" src="https://th.bing.com/th/id/OIP.HJmjxJswAx9G_UQlcKvBjQAAAA?pid=ImgDet&rs=1" alt="">
+          <div class=" col-12 col-sm-12 col-md-8 col-lg-8 p-0 d-flex flex-column justify-content-center align-items-center py-3">
             <h3 class="fw-bold text-center text-info">Shingeki No Kyojin season 4 part 2</h3>
             <p class="text-light text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, est!</p>
             <span class="text-light fw-bold">Tv show</span>
@@ -53,16 +59,10 @@
               <a class="btn btn-light text-info ms-4" href="#">Ir a ver</a>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="cards-container">
-        <!-- <div class="anime-card">
-          <img src="https://th.bing.com/th/id/OIP.HJmjxJswAx9G_UQlcKvBjQAAAA?pid=ImgDet&rs=1" alt="anime img">
-          <div>
-            <p class="text-dark m-0">Shingeky no kyojin</p>
-          </div>
         </div> -->
+      </section>
+      <section class="cards-container">
+        <!-- cards generadas en renderCards.js -->
       </section>
 
     <!-- bootstrap 5 -->
