--- a/index.html
+++ b/index.html
@@ -1,54 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Anime chibi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <!-- link style css -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <!-- script main.js -->
     <script src="./main.js" type="module" defer></script>
-</head>
-<body>
+    <script src="./components/modePage.js" defer></script>
+  </head>
+
+  <body>
     <nav class="navbar navbar-expand-lg bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand fw-bold text-light" href="#">Anime<span class="text-info">Chibi</span></a>
-          <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse py-2" id="navbarSupportedContent">
-            <form class="d-flex" role="search">
-              <input class="formSearch  form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <input class="submit btn btn-info" type="submit" value="Search">
-            </form>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Genres
-                </a>
-                <ul class="dropdown-menu p-1" id="genres">
-                  <!-- <li><button class="btnGenre btn border-0 col-12" value="Hola">HEYYYYYYYYYY</button></li> -->
-                  <!-- <button class="btnGenre btn border-0 col-12 col-sm-10 col-md-5 col-lg-4" value="Action">Action</button> -->
-                </ul>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold text-light" href="#"
+          >Anime<span class="text-info">Chibi</span></a
+        >
+        <button
+          class="navbar-toggler bg-light"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse py-2" id="navbarSupportedContent">
+          <form class="d-flex" role="search">
+            <input
+              class="formSearch form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <input class="submit btn btn-info" type="submit" value="Search" />
+          </form>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-light"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Genres
+              </a>
+              <ul class="dropdown-menu p-1" id="genres">
+                <!-- <li><button class="btnGenre btn border-0 col-12" value="Hola">HEYYYYYYYYYY</button></li> -->
+                <!-- <button class="btnGenre btn border-0 col-12 col-sm-10 col-md-5 col-lg-4" value="Action">Action</button> -->
+              </ul>
+            </li>
+            <li class="nav-item">
+              <label for="toggle" id="label_toggle"
+                ><i class="fa-solid fa-sun" style="color: #fffd80"></i
+              ></label>
+              <input type="checkbox" id="toggle" />
+            </li>
+          </ul>
         </div>
-      </nav>
-      <div class="genre_tittle-container container-fluid p-3">
+      </div>
+    </nav>
+    <!-- <div class="genre_tittle-container container-fluid p-3">
         <div class="row">
           <div class="col-12">
             <h1 class="genre-title text-center text-info fw-bold"></h1>
           </div>
         </div>
-      </div>
-      <section class="anime_info-container container my-3">
-        <!-- <div class="row rounded bg-dark">
+      </div> -->
+    <section class="anime_info-container container my-3">
+      <!-- <div class="row rounded bg-dark">
           <img class="col-12 col-sm-12 col-md-4 col-lg-3 p-0" src="https://th.bing.com/th/id/OIP.HJmjxJswAx9G_UQlcKvBjQAAAA?pid=ImgDet&rs=1" alt="">
           <div class=" col-12 col-sm-12 col-md-8 col-lg-8 p-0 d-flex flex-column justify-content-center align-items-center py-3">
             <h3 class="fw-bold text-center text-info">Shingeki No Kyojin season 4 part 2</h3>
@@ -60,15 +90,22 @@
             </div>
           </div>
         </div> -->
-      </section>
-      <section class="cards-container">
-        <!-- cards generadas en renderCards.js -->
-      </section>
+    </section>
 
+    <section class="cards-container">
+      <!-- cards generadas en renderCards.js -->
+    </section>
+
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/d615d43ab0.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- bootstrap 5 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
